--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@ url: "http://drhardman.fi" # the base hostname & protocol for your site, e.g. ht
 github_username:  wickstro
 permalink: pretty
 
-
+sass:
+    sass_dir: _sass
 # Build settings
 markdown: kramdown
 
